21/07/08 -*- Version 1.6.0 -*-

28/05/09 Julien Dutheil
* Added basic support for the Nexus format.

22/05/09 Julien Dutheil
* Improved Clustal format (solves bug found by Emmanuel M.)
* SequenceApplicationTools uses the keyval syntax for format description.

27/04/09 Julien Dutheil
* Added site randomization method.

28/02/09 Julien Dutheil
* Added mutual information calculation.
* Added pairwise counting methods.
* Frequencies counting methods have been improved (avoid useless copy of maps).

16/01/09 Julien Dutheil
* max_gap_allowed option in SequenceApplicationTools is now a included bound:
  0 or 0% will keep all complete sites, and 'n=number of sequences' or 100%
	will keep all sites.

13/01/09 Sylvain Gaillard
* Little optimization in Fasta::write() method.

12/01/09 Sylvain Gaillard
* Added support for comments (HUPO-PSI like) in Fasta.

08/01/09 Julien Dutheil
* SequenceTools::reverse method has been deprecated in favor of the
  SequenceTools::inverse method, of witch it is now an alias.

07/01/09 Julien Dutheil
* Code improvement in Vector containers.

21/12/08 Julien Dutheil
* Return type for clone() methods corrected (Sequence, Site, SiteContainer and derivated classes).
* Bug fixed in SequenceApplicationTools::get[Sequence/Site]Container, phylip format.

21/07/08 -*- Version 1.5.0 -*-

05/12/08 Julien Dutheil
* VectorSiteContainer::getSite() faster (more than 10 times faster on a ~500
	sequences data set!)

04/12/08 Julien Dutheil
* Fixed missing redefinition of translate and reverse methods in class DNAToRNA.
* Made inheritance virtual.

01/12/08 Julien Dutheil
* New methods getSupportedInts and getSupportedChars in Alphabet classes.

18/11/08 Julien Dutheil
* biopp-help-forum 91 (by Stephen Smith): Fasta, Mase, Clustal and Phylip now
  have an option to turn off the name checking and decrease loading time.
* biopp-help-forum 93 (by Stephen Smith): Phylip format now supports any
 delimiter when reading/writing files in extended format.
